nobase_include_HEADERS = \
beecrypt/aes.h \
beecrypt/aesopt.h \
beecrypt/api.h \
beecrypt/base64.h \
beecrypt/beecrypt.h \
beecrypt/blockmode.h \
beecrypt/blockpad.h \
beecrypt/blowfish.h \
beecrypt/blowfishopt.h \
beecrypt/dhies.h \
beecrypt/dldp.h \
beecrypt/dlkp.h \
beecrypt/dlpk.h \
beecrypt/dlsvdp-dh.h \
beecrypt/dsa.h \
beecrypt/elgamal.h \
beecrypt/endianness.h \
beecrypt/entropy.h \
beecrypt/fips186.h \
beecrypt/gnu.h \
beecrypt/hmac.h \
beecrypt/hmacmd5.h \
beecrypt/hmacsha1.h \
beecrypt/hmacsha224.h \
beecrypt/hmacsha256.h \
beecrypt/hmacsha384.h \
beecrypt/hmacsha512.h \
beecrypt/md4.h \
beecrypt/md5.h \
beecrypt/memchunk.h \
beecrypt/mpbarrett.h \
beecrypt/mp.h \
beecrypt/mpnumber.h \
beecrypt/mpopt.h \
beecrypt/mpprime.h \
beecrypt/mtprng.h \
beecrypt/pkcs12.h \
beecrypt/pkcs1.h \
beecrypt/ripemd128.h \
beecrypt/ripemd160.h \
beecrypt/ripemd256.h \
beecrypt/ripemd320.h \
beecrypt/rsa.h \
beecrypt/rsakp.h \
beecrypt/rsapk.h \
beecrypt/sha1.h \
beecrypt/sha1opt.h \
beecrypt/sha224.h \
beecrypt/sha256.h \
beecrypt/sha384.h \
beecrypt/sha512.h \
beecrypt/sha2k32.h \
beecrypt/sha2k64.h \
beecrypt/timestamp.h \
beecrypt/win.h

if WITH_CPLUSPLUS
nobase_include_HEADERS += \
beecrypt/c++/array.h \
beecrypt/c++/mutex.h \
\
beecrypt/c++/beeyond/AnyEncodedKeySpec.h \
beecrypt/c++/beeyond/BeeCertificate.h \
beecrypt/c++/beeyond/BeeCertPath.h \
beecrypt/c++/beeyond/BeeCertPathParameters.h \
beecrypt/c++/beeyond/BeeCertPathValidatorResult.h \
beecrypt/c++/beeyond/BeeEncodedKeySpec.h \
beecrypt/c++/beeyond/BeeInputStream.h \
beecrypt/c++/beeyond/BeeOutputStream.h \
beecrypt/c++/beeyond/DHIESDecryptParameterSpec.h \
beecrypt/c++/beeyond/DHIESParameterSpec.h \
beecrypt/c++/beeyond/PKCS12PBEKey.h \
\
beecrypt/c++/crypto/BadPaddingException.h \
beecrypt/c++/crypto/Cipher.h \
beecrypt/c++/crypto/CipherSpi.h \
beecrypt/c++/crypto/IllegalBlockSizeException.h \
beecrypt/c++/crypto/KeyAgreement.h \
beecrypt/c++/crypto/KeyAgreementSpi.h \
beecrypt/c++/crypto/Mac.h \
beecrypt/c++/crypto/MacInputStream.h \
beecrypt/c++/crypto/MacOutputStream.h \
beecrypt/c++/crypto/MacSpi.h \
beecrypt/c++/crypto/NoSuchPaddingException.h \
beecrypt/c++/crypto/NullCipher.h \
beecrypt/c++/crypto/SecretKeyFactory.h \
beecrypt/c++/crypto/SecretKeyFactorySpi.h \
beecrypt/c++/crypto/SecretKey.h \
\
beecrypt/c++/crypto/interfaces/DHKey.h \
beecrypt/c++/crypto/interfaces/DHParams.h \
beecrypt/c++/crypto/interfaces/DHPrivateKey.h \
beecrypt/c++/crypto/interfaces/DHPublicKey.h \
beecrypt/c++/crypto/interfaces/PBEKey.h \
\
beecrypt/c++/crypto/spec/DHParameterSpec.h \
beecrypt/c++/crypto/spec/DHPrivateKeySpec.h \
beecrypt/c++/crypto/spec/DHPublicKeySpec.h \
beecrypt/c++/crypto/spec/IvParameterSpec.h \
beecrypt/c++/crypto/spec/PBEKeySpec.h \
beecrypt/c++/crypto/spec/SecretKeySpec.h \
\
beecrypt/c++/io/ByteArrayInputStream.h \
beecrypt/c++/io/ByteArrayOutputStream.h \
beecrypt/c++/io/Closeable.h \
beecrypt/c++/io/DataInput.h \
beecrypt/c++/io/DataInputStream.h \
beecrypt/c++/io/DataOutput.h \
beecrypt/c++/io/DataOutputStream.h \
beecrypt/c++/io/EOFException.h \
beecrypt/c++/io/FileInputStream.h \
beecrypt/c++/io/FileOutputStream.h \
beecrypt/c++/io/FilterInputStream.h \
beecrypt/c++/io/FilterOutputStream.h \
beecrypt/c++/io/Flushable.h \
beecrypt/c++/io/InputStream.h \
beecrypt/c++/io/IOException.h \
beecrypt/c++/io/OutputStream.h \
beecrypt/c++/io/PrintStream.h \
beecrypt/c++/io/PushbackInputStream.h \
beecrypt/c++/io/Writer.h \
\
beecrypt/c++/lang/Appendable.h \
beecrypt/c++/lang/ArithmeticException.h \
beecrypt/c++/lang/Character.h \
beecrypt/c++/lang/CharSequence.h \
beecrypt/c++/lang/ClassCastException.h \
beecrypt/c++/lang/Cloneable.h \
beecrypt/c++/lang/CloneNotSupportedException.h \
beecrypt/c++/lang/Comparable.h \
beecrypt/c++/lang/Error.h \
beecrypt/c++/lang/Exception.h \
beecrypt/c++/lang/IllegalArgumentException.h \
beecrypt/c++/lang/IllegalMonitorStateException.h \
beecrypt/c++/lang/IllegalStateException.h \
beecrypt/c++/lang/IllegalThreadStateException.h \
beecrypt/c++/lang/IndexOutOfBoundsException.h \
beecrypt/c++/lang/Integer.h \
beecrypt/c++/lang/InterruptedException.h \
beecrypt/c++/lang/Long.h \
beecrypt/c++/lang/NullPointerException.h \
beecrypt/c++/lang/Number.h \
beecrypt/c++/lang/NumberFormatException.h \
beecrypt/c++/lang/Object.h \
beecrypt/c++/lang/OutOfMemoryError.h \
beecrypt/c++/lang/Runnable.h \
beecrypt/c++/lang/RuntimeException.h \
beecrypt/c++/lang/StringBuffer.h \
beecrypt/c++/lang/StringBuilder.h \
beecrypt/c++/lang/String.h \
beecrypt/c++/lang/System.h \
beecrypt/c++/lang/Thread.h \
beecrypt/c++/lang/Throwable.h \
beecrypt/c++/lang/UnsupportedOperationException.h \
\
beecrypt/c++/math/BigInteger.h \
\
beecrypt/c++/nio/Buffer.h \
beecrypt/c++/nio/ByteBuffer.h \
beecrypt/c++/nio/ByteOrder.h \
beecrypt/c++/nio/InvalidMarkException.h \
beecrypt/c++/nio/ReadOnlyBufferException.h \
\
beecrypt/c++/security/AlgorithmParameterGenerator.h \
beecrypt/c++/security/AlgorithmParameterGeneratorSpi.h \
beecrypt/c++/security/AlgorithmParameters.h \
beecrypt/c++/security/AlgorithmParametersSpi.h \
beecrypt/c++/security/DigestInputStream.h \
beecrypt/c++/security/DigestOutputStream.h \
beecrypt/c++/security/GeneralSecurityException.h \
beecrypt/c++/security/InvalidAlgorithmParameterException.h \
beecrypt/c++/security/InvalidKeyException.h \
beecrypt/c++/security/InvalidParameterException.h \
beecrypt/c++/security/KeyException.h \
beecrypt/c++/security/KeyFactory.h \
beecrypt/c++/security/KeyFactorySpi.h \
beecrypt/c++/security/Key.h \
beecrypt/c++/security/KeyPairGenerator.h \
beecrypt/c++/security/KeyPairGeneratorSpi.h \
beecrypt/c++/security/KeyPair.h \
beecrypt/c++/security/KeyStoreException.h \
beecrypt/c++/security/KeyStore.h \
beecrypt/c++/security/KeyStoreSpi.h \
beecrypt/c++/security/MessageDigest.h \
beecrypt/c++/security/MessageDigestSpi.h \
beecrypt/c++/security/NoSuchAlgorithmException.h \
beecrypt/c++/security/NoSuchProviderException.h \
beecrypt/c++/security/PrivateKey.h \
beecrypt/c++/security/ProviderException.h \
beecrypt/c++/security/Provider.h \
beecrypt/c++/security/PublicKey.h \
beecrypt/c++/security/SecureRandom.h \
beecrypt/c++/security/SecureRandomSpi.h \
beecrypt/c++/security/Security.h \
beecrypt/c++/security/ShortBufferException.h \
beecrypt/c++/security/SignatureException.h \
beecrypt/c++/security/Signature.h \
beecrypt/c++/security/SignatureSpi.h \
\
beecrypt/c++/security/auth/Destroyable.h \
beecrypt/c++/security/auth/DestroyFailedException.h \
\
beecrypt/c++/security/cert/CertificateEncodingException.h \
beecrypt/c++/security/cert/CertificateException.h \
beecrypt/c++/security/cert/CertificateExpiredException.h \
beecrypt/c++/security/cert/CertificateFactory.h \
beecrypt/c++/security/cert/CertificateFactorySpi.h \
beecrypt/c++/security/cert/Certificate.h \
beecrypt/c++/security/cert/CertificateNotYetValidException.h \
beecrypt/c++/security/cert/CertPath.h \
beecrypt/c++/security/cert/CertPathParameters.h \
beecrypt/c++/security/cert/CertPathValidatorException.h \
beecrypt/c++/security/cert/CertPathValidator.h \
beecrypt/c++/security/cert/CertPathValidatorResult.h \
beecrypt/c++/security/cert/CertPathValidatorSpi.h \
\
beecrypt/c++/security/interfaces/DSAKey.h \
beecrypt/c++/security/interfaces/DSAParams.h \
beecrypt/c++/security/interfaces/DSAPrivateKey.h \
beecrypt/c++/security/interfaces/DSAPublicKey.h \
beecrypt/c++/security/interfaces/ECKey.h \
beecrypt/c++/security/interfaces/ECPrivateKey.h \
beecrypt/c++/security/interfaces/ECPublicKey.h \
beecrypt/c++/security/interfaces/RSAKey.h \
beecrypt/c++/security/interfaces/RSAPrivateCrtKey.h \
beecrypt/c++/security/interfaces/RSAPrivateKey.h \
beecrypt/c++/security/interfaces/RSAPublicKey.h \
\
beecrypt/c++/security/spec/AlgorithmParameterSpec.h \
beecrypt/c++/security/spec/DSAParameterSpec.h \
beecrypt/c++/security/spec/DSAPrivateKeySpec.h \
beecrypt/c++/security/spec/DSAPublicKeySpec.h \
beecrypt/c++/security/spec/EncodedKeySpec.h \
beecrypt/c++/security/spec/InvalidKeySpecException.h \
beecrypt/c++/security/spec/InvalidParameterSpecException.h \
beecrypt/c++/security/spec/KeySpec.h \
beecrypt/c++/security/spec/RSAKeyGenParameterSpec.h \
beecrypt/c++/security/spec/RSAPrivateCrtKeySpec.h \
beecrypt/c++/security/spec/RSAPrivateKeySpec.h \
beecrypt/c++/security/spec/RSAPublicKeySpec.h \
beecrypt/c++/security/UnrecoverableKeyException.h \
\
beecrypt/c++/util/AbstractCollection.h \
beecrypt/c++/util/AbstractList.h \
beecrypt/c++/util/AbstractMap.h \
beecrypt/c++/util/AbstractSet.h \
beecrypt/c++/util/ArrayList.h \
beecrypt/c++/util/Collection.h \
beecrypt/c++/util/ConcurrentModificationException.h \
beecrypt/c++/util/Date.h \
beecrypt/c++/util/Enumeration.h \
beecrypt/c++/util/Hashtable.h \
beecrypt/c++/util/Iterable.h \
beecrypt/c++/util/Iterator.h \
beecrypt/c++/util/List.h \
beecrypt/c++/util/ListIterator.h \
beecrypt/c++/util/Map.h \
beecrypt/c++/util/NoSuchElementException.h \
beecrypt/c++/util/Properties.h \
beecrypt/c++/util/Queue.h \
beecrypt/c++/util/RandomAccess.h \
beecrypt/c++/util/Set.h \
\
beecrypt/c++/util/concurrent/Callable.h \
\
beecrypt/c++/util/concurrent/locks/Condition.h \
beecrypt/c++/util/concurrent/locks/Lock.h \
beecrypt/c++/util/concurrent/locks/ReentrantLock.h
endif

noinst_HEADERS = \
beecrypt/aes_be.h \
beecrypt/aes_le.h \
\
beecrypt/c++/adapter.h \
beecrypt/c++/posix.h \
beecrypt/c++/resource.h \
\
beecrypt/c++/provider/AESCipher.h \
beecrypt/c++/provider/BaseProvider.h \
beecrypt/c++/provider/BeeCertificateFactory.h \
beecrypt/c++/provider/BeeCertPathValidator.h \
beecrypt/c++/provider/BeeKeyFactory.h \
beecrypt/c++/provider/BeeKeyStore.h \
beecrypt/c++/provider/BeeSecureRandom.h \
beecrypt/c++/provider/BlockCipher.h \
beecrypt/c++/provider/BlowfishCipher.h \
beecrypt/c++/provider/DHIESCipher.h \
beecrypt/c++/provider/DHIESParameters.h \
beecrypt/c++/provider/DHKeyAgreement.h \
beecrypt/c++/provider/DHKeyFactory.h \
beecrypt/c++/provider/DHKeyPairGenerator.h \
beecrypt/c++/provider/DHParameterGenerator.h \
beecrypt/c++/provider/DHParameters.h \
beecrypt/c++/provider/DHPrivateKeyImpl.h \
beecrypt/c++/provider/DHPublicKeyImpl.h \
beecrypt/c++/provider/DSAKeyFactory.h \
beecrypt/c++/provider/DSAKeyPairGenerator.h \
beecrypt/c++/provider/DSAParameterGenerator.h \
beecrypt/c++/provider/DSAParameters.h \
beecrypt/c++/provider/DSAPrivateKeyImpl.h \
beecrypt/c++/provider/DSAPublicKeyImpl.h \
beecrypt/c++/provider/HMAC.h \
beecrypt/c++/provider/HMACMD5.h \
beecrypt/c++/provider/HMACSHA1.h \
beecrypt/c++/provider/HMACSHA256.h \
beecrypt/c++/provider/HMACSHA384.h \
beecrypt/c++/provider/HMACSHA512.h \
beecrypt/c++/provider/KeyProtector.h \
beecrypt/c++/provider/MD5Digest.h \
beecrypt/c++/provider/MD5withRSASignature.h \
beecrypt/c++/provider/PKCS12KeyFactory.h \
beecrypt/c++/provider/PKCS1RSASignature.h \
beecrypt/c++/provider/RSAKeyFactory.h \
beecrypt/c++/provider/RSAKeyPairGenerator.h \
beecrypt/c++/provider/RSAPrivateCrtKeyImpl.h \
beecrypt/c++/provider/RSAPrivateKeyImpl.h \
beecrypt/c++/provider/RSAPublicKeyImpl.h \
beecrypt/c++/provider/SHA1Digest.h \
beecrypt/c++/provider/SHA1withDSASignature.h \
beecrypt/c++/provider/SHA1withRSASignature.h \
beecrypt/c++/provider/SHA256Digest.h \
beecrypt/c++/provider/SHA224Digest.h \
beecrypt/c++/provider/SHA256withRSASignature.h \
beecrypt/c++/provider/SHA384Digest.h \
beecrypt/c++/provider/SHA384withRSASignature.h \
beecrypt/c++/provider/SHA512Digest.h \
beecrypt/c++/provider/SHA512withRSASignature.h \
\
beecrypt/java/beecrypt_provider_AES.h \
beecrypt/java/beecrypt_provider_DHKeyPairGenerator.h \
beecrypt/java/beecrypt_provider_HMACMD5.h \
beecrypt/java/beecrypt_provider_HMACSHA1.h \
beecrypt/java/beecrypt_provider_HMACSHA256.h \
beecrypt/java/beecrypt_provider_HMACSHA384.h \
beecrypt/java/beecrypt_provider_HMACSHA512.h \
beecrypt/java/beecrypt_provider_MD4.h \
beecrypt/java/beecrypt_provider_MD5.h \
beecrypt/java/beecrypt_provider_RSAKeyPairGenerator.h \
beecrypt/java/beecrypt_provider_SHA1.h \
beecrypt/java/beecrypt_provider_SHA224.h \
beecrypt/java/beecrypt_provider_SHA256.h \
beecrypt/java/beecrypt_provider_SHA384.h \
beecrypt/java/beecrypt_provider_SHA512.h \
beecrypt/java/beecrypt_tools.h \
\
beecrypt/python \
beecrypt/python/mpw-py.h \
beecrypt/python/rng-py.h

EXTRA_DIST = beecrypt/Doxyheader beecrypt/c++/Doxyheader
